[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package]
name = "lorsrf"
repository = "https://github.com/knassar702/lorsrf"
license = "GPLv3"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
isahc = "1.5.1"
clap = "2.33.0"
url = "2.2.2"
regex = "0.2"
scoped_threadpool = "0.1.9"
serde_json = "1.0.72"
indicatif = "0.16.2"
