[profile.release]
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
strip = true

[package]
name = "lorsrf"
repository = "https://github.com/knassar702/lorsrf"
license = "GPLv3"
version = "2.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
tokio = { version = "1.21.0", features = ["full"] }
serde_json = "1.0.72"
indicatif = "0.16.2"
structopt = "0.3.26"
reqwest = { version = "0.12.7", features=["json"] }
